fixed navigation bar overlapping login buttons.

--- a/css/index.css
+++ b/css/index.css
@@ -1030,11 +1030,11 @@ select:focus {
   font-weight: 400;
 }
 .section2 {
-  position: relative;
   overflow: hidden;
 }
 .section2 .contactform {
-  position: absolute;
+  width: fit-content;
+  margin: auto;
   top: 0;
   right: 10%;
   z-index: 99;
@@ -1093,9 +1093,6 @@ select:focus {
 @media only screen and (max-width: 660px) {
   .container {
     padding: 10px 20px 30px;
-  }
-  .contmap {
-    height: 475px !important;
   }
   .sec1title h1 {
     font-size: 28px;
